--- a/sohan/revise.html
+++ b/sohan/revise.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- <h1>Type in your age</h1>
+    <input type="text" id="i1">
+    <button onclick="Check()">Submit</button> -->
     <script src="Sohan.js"></script>
 </body>
 </html>
